# axum_playground

./: Dockerfile  README.md  build_and_run.sh
hello_axum/: Cargo.toml
hello_axum/src/: main.rs
query_param_get/: Cargo.toml
query_param_get/src/: main.rs
query_param_path/: Cargo.toml
query_param_path/src/: main.rs
routes_composition/: Cargo.toml
routes_composition/src/: main.rs
static_routing/: Cargo.toml
static_routing/src/: main.rs
